tests/ui/where-clauses/cfg_attribute.b.stderr
error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:31:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:42:11
   |
LL |         #[derive(Clone)] ():,
   |           ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:53:11
   |
LL |         #[derive(Clone)] ():,
   |           ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:65:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:75:11
   |
LL |         #[derive(Clone)] ():,
   |           ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:86:11
   |
LL |         #[derive(Clone)] ():,
   |           ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:99:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:113:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:128:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:143:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:154:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:164:11
   |
LL |         #[derive(Clone)] ():,
   |           ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `derive`
  --> $DIR/cfg_attribute.rs:177:7
   |
LL |     #[derive(Clone)] ():,
   |       ^^^^^^ not a non-macro attribute

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:31:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:34:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:42:9
   |
LL |         #[derive(Clone)] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:45:9
   |
LL |         #[rustfmt::skip] ():;
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:53:9
   |
LL |         #[derive(Clone)] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:56:9
   |
LL |         #[rustfmt::skip] ():;
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:65:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:68:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:75:9
   |
LL |         #[derive(Clone)] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:78:9
   |
LL |         #[rustfmt::skip] ():;
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:86:9
   |
LL |         #[derive(Clone)] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:89:9
   |
LL |         #[rustfmt::skip] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:99:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:102:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:113:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:116:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:128:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:131:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:143:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:146:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:154:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:157:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:164:9
   |
LL |         #[derive(Clone)] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:167:9
   |
LL |         #[rustfmt::skip] ():,
   |         ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:177:5
   |
LL |     #[derive(Clone)] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: most attributes are not supported in `where` clauses
  --> $DIR/cfg_attribute.rs:180:5
   |
LL |     #[rustfmt::skip] ():,
   |     ^^^^^^^^^^^^^^^^
   |
   = help: only `#[cfg]` and `#[cfg_attr]` are supported

error: aborting due to 39 previous errors

